fix menu overflow bug for mobile

--- a/sidebar.less
+++ b/sidebar.less
@@ -16,6 +16,8 @@
     &.container-fluid{
         position: absolute;
         left: 0;
+        padding-left: 15px;
+        padding-right: 15px;
     }
     .sidebar-wrapper{
         z-index: 1000;
@@ -24,7 +26,7 @@
         width: 0;
         height: 100%;
         margin-left: -250px;
-        // overflow-y: auto;
+        overflow: hidden;
         background: @navbar-inverse-bg;
         -webkit-transition: width 0.5s ease;
         -moz-transition: width 0.5s ease;
